--- a/塔罗牌.md
+++ b/塔罗牌.md
@@ -2,21 +2,21 @@
 
 塔罗牌（Tarot Card）是一种起源于西方的，用于游戏和占卜的卡牌。作为占卜工具，塔罗牌吸收了各种神秘学符号而自成体系[0]。
 
-![tarot cards](./images/tarot.png)
+![tarot cards](./images/tarot-VICTORMOUSSA-STOCK.ADOBE.COM.png)
 *By VICTOR MOUSSA - STOCK.ADOBE.COM*
 
 
 标准的塔罗牌一共78张牌。共分为两组：22张大阿卡纳（Major Arcana）和56张小阿卡纳（Minor Arcana）。大阿卡那牌从 0愚人 开始，到 21世界 结束。牌名皆为某些符号，例如：死亡、太阳、高塔、命运之轮等等。
-小阿卡纳牌分为四组：宝剑、圣杯、星币、权杖。分别对应 四种基础元素：风、水、土、火。其中每一组又分为 1-10张数字牌 和 4张宫廷牌：侍从、骑士、国王、王后。
+小阿卡纳牌分为四组：宝剑、圣杯、星币、权杖。分别对应 四种基础元素：风、水、土、火。其中每一组又分为 1-10张数字牌 和 4张宫廷牌：侍从、骑士、国王、王后。例如：权杖5、圣杯国王、宝剑骑士等等。
 
-将塔罗牌用于占卜时，需要理解每张牌的含义。塔罗牌的含义不仅与牌的数字和名称有关，也与设计师绘制的 图像以及图像的内在意象有关。不同的卡组编排，以及图像和意象，将塔罗牌分为不同的体系和版本（或称为牌组 deck）。
+用塔罗牌占卜时，需要理解每张牌的含义。塔罗牌的含义不仅与数字和名称有关，也与设计师绘制的 图像以及图像的意象有关。不同的卡组编排，以及图像和传达的意象，将塔罗牌分为不同的体系和版本（或称为牌组 deck）。
 塔罗牌的解读与版本密切相关。同一张牌在不同的版本之间含义也有差别。在解读、使用塔罗牌时，不光要注意每张牌的通用含义，也要注意不同版本的独特含义。
 
-![the fool in different decks](./images/tarotFool.png)
+![the fool in different decks](./images/tarotFool-EleanorTremeer-liminal11.com.png)
 *By Eleanor Tremeer - liminal11.com*
 
 
-塔罗牌最经典的版本是 韦特塔罗牌（Rider-Waite Tarot）。它于1909年由 帕梅拉·寇门·史密斯（Pamela Colman Smith）在 亚瑟·爱德华·伟特（Arthur Edward Waite）的指导下绘制完成。作者伟特同时还出版了一本解读塔罗牌的书《经典塔罗》。该版本已在全世界广泛流行，现在大多数的塔罗牌版本，都基于韦特塔罗牌 二次设计。
+塔罗牌最经典的版本是 韦特塔罗牌（Rider-Waite Tarot）。它于1909年由 帕梅拉·寇门·史密斯（Pamela Colman Smith）在 亚瑟·爱德华·伟特（Arthur Edward Waite）的指导下绘制完成。作者伟特同时还出版了一本解读塔罗牌的书《经典塔罗》。该版本已在全世界广泛流行，目前大多数的塔罗牌版本都是基于韦特塔罗牌进行二次设计。
 
 
 # 塔罗牌的起源：
@@ -43,7 +43,7 @@
 
 在使用塔罗牌进行占卜时，通常需要使用 牌阵（spreads）。一个牌阵包含了不同的卡牌位置，并赋予每个卡牌位置不同的含义。最简单的牌阵只有一个 位置。该位置的含义就是占卜者心中想要询问的问题。然后得到的塔罗牌就包含了对该问题的解读。
 稍复杂一点的，例如在 经典的3牌牌阵（3-cards spread）：过去-现在-未来 中，有3个卡牌位置。这3个卡牌位置分别代表 过去的情况、现在的情况、未来的情况。在占卜中，占卜者得到3张塔罗牌，并分别放入这3个位置。根据每个位置代表的情形 和 在此位置上的塔罗牌，就可以得到对该情形的解读。例如在 过去位置 上为倒立的恶魔，就可以解读为在过去欲望太多，而难以满足……
-当然，这3个位置，或者说3张卡牌，除了上面的含义外还可以被赋予各种不同的意义，比如：思维-身体-精神、欲望-阻碍-解决 等等。更加复杂的牌阵往往会有超过5个位置，而且位置之间也有特定的关联。
+当然，这3个位置，或者说3张卡牌，除了上面的含义外还可以被赋予各种不同的意义，比如：思维-身体-精神、欲望-阻碍-解决 等等。而更加复杂的牌阵往往会有超过5个位置，而且位置之间也有特定的关联。
 
 ![tarot spreads](./images/tarotSpreads.png)
 
