--- a/docs/塔罗牌.md
+++ b/docs/塔罗牌.md
@@ -1,12 +1,12 @@
 # 塔罗牌的介绍
 
-塔罗牌（Tarot Card）是一种起源于西方的，用于游戏和占卜的卡牌。作为占卜工具，塔罗牌吸收了各种神秘学符号而自成体系[0]。
+塔罗牌（Tarot Card）是一种起源于西方的，用于游戏和占卜的卡牌。塔罗牌是一个成功的占卜工具，它吸收了各种神秘学符号，并自成体系[0]。
 
 ![tarot cards](../images/tarot-VICTORMOUSSA-STOCK.ADOBE.COM.png)
 *By VICTOR MOUSSA - STOCK.ADOBE.COM*
 
 
-标准的塔罗牌一共78张牌。共分为两组：22张大阿卡纳（Major Arcana）和56张小阿卡纳（Minor Arcana）。大阿卡那牌从 0愚人 开始，到 21世界 结束。牌名皆为某些符号，例如：死亡、太阳、高塔、命运之轮等等。
+标准的塔罗牌一共78张牌。共分为两组：22张大阿卡纳（Major Arcana）和56张小阿卡纳（Minor Arcana）。大阿卡那牌从 0愚人 开始，到 21世界 结束。牌名皆为某些意象符号，例如：死亡、太阳、高塔、命运之轮等等。
 小阿卡纳牌分为四组：宝剑、圣杯、星币、权杖。分别对应 四种基础元素：风、水、土、火。其中每一组又分为 1-10张数字牌 和 4张宫廷牌：侍从、骑士、国王、王后。例如：权杖5、圣杯国王、宝剑骑士等等。
 
 用塔罗牌占卜时，需要理解每张牌的含义。塔罗牌的含义不仅与数字和名称有关，也与设计师绘制的 图像以及图像的意象有关。不同的卡组编排，以及图像和传达的意象，将塔罗牌分为不同的体系和版本（或称为牌组 deck）。
@@ -34,7 +34,7 @@
 
 # 塔罗牌的原理
 
-塔罗牌是一种符号（Symbol）象征系统。解读者需要解读符号背后的含义[2]。换种说法，塔罗牌上的图像，包含了丰富的意象。因此塔罗牌是一种语言，它是连接了显性图片和潜意识的桥梁。不同的人，对相同的符号或图像，会解读出不同的含义或意象。所以塔罗牌能够反映出不同的人内心中的潜意识。
+塔罗牌是一种符号（Symbol）象征系统。塔罗牌上的图像，包含了丰富的意象。解读者需要解读符号背后的含义[2]。因此塔罗牌是一种语言，它是连接了显性图片和潜意识的桥梁。不同的人，对相同的符号或图像，会解读出不同的含义或意象。所以塔罗牌能够反映出每个人内心中的潜意识。
 
 在这方面的研究可查询 卡尔·荣格。卡尔·荣格是一名著名的心理学家，他提出了 集体潜意识理论。在荣格看来，塔罗牌如同中国易经的卦象或其他带有神秘学色彩的仪式，都是能让我们与集体潜意识交流的工具[3]。此外，荣格还提出了 共时性（synchronicity）原理，用来解释 占卜结果的偶然性和占卜事件的必然性 之间的联系。
 
@@ -43,7 +43,7 @@
 
 # 塔罗牌的牌阵
 
-在使用塔罗牌进行占卜时，通常需要使用 牌阵（spreads）。一个牌阵包含了不同的卡牌位置，并赋予每个卡牌位置不同的含义。最简单的牌阵只有一个 位置。该位置的含义就是占卜者心中想要询问的问题。然后得到的塔罗牌就包含了对该问题的解读。
+在使用塔罗牌进行占卜时，通常需要使用 牌阵（spreads）。一个牌阵包含了不同的卡牌位置，并赋予每个卡牌位置不同的含义。最简单的牌阵只有一个 位置。该位置的含义就是占卜者心中想要询问的问题。该位置的塔罗牌就包含了对该问题的解读。
 稍复杂一点的，例如在 经典的3牌牌阵（3-cards spread）：过去-现在-未来 中，有3个卡牌位置。这3个卡牌位置分别代表 过去的情况、现在的情况、未来的情况。在占卜中，占卜者得到3张塔罗牌，并分别放入这3个位置。根据每个位置代表的情形 和 在此位置上的塔罗牌，就可以得到对该情形的解读。例如在 过去位置 上为倒立的恶魔，就可以解读为在过去欲望太多，而难以满足……
 当然，这3个位置，或者说3张卡牌，除了上面的含义外还可以被赋予各种不同的意义，比如：思维-身体-精神、欲望-阻碍-解决 等等。而更加复杂的牌阵往往会有超过5个位置，而且位置之间也有特定的关联。
 
@@ -62,6 +62,7 @@
 
 
 # 参考：
+
 [0]  [塔罗牌 - 维基百科，自由的百科全书](https://zh.wikipedia.org/wiki/%E5%A1%94%E7%BE%85%E7%89%8C)
 
 [1]  [各种塔罗起源理论的批驳（转） - 塔羅基礎 ](http://www.imslr.com/thread-26141-1-1.html)
