--- a/_posts/2022-06-20-老子楚简版.md
+++ b/_posts/2022-06-20-老子楚简版.md
@@ -1,3 +1,9 @@
+---
+title: "老子楚简版"
+date: 2022-06-20
+excerpt: 《老子》又名《道德经》，是中华传统文化的经典著作，也是道家思想和道教的起源...
+---
+
 # 前言
 
 《老子》又名《道德经》，是中华传统文化的经典著作，也是道家思想和道教的起源。现今主要有3个版本：
@@ -7,9 +13,10 @@
 
 本文为 楚简版《老子》，并按照个人理解进行了重新编排。
 
+<br>
 # 《老子》全文
 
-## 论道
+### 论道
 
 1
 >有象混成，先天地生；清廖，独立不亥，可以为天下母。未知其名，字之曰道，吾强为之名曰大。大曰折，折曰转，转曰返。
@@ -41,7 +48,7 @@
 诎：语塞。屈服，弯曲等。
 
 
-## 修身
+### 修身
 
 1
 >罪莫厚于甚欲，咎莫佥（险）于欲得，祸莫大于不知足。知足之为足，此恒足矣。
@@ -130,7 +137,7 @@
 >修之身，其德乃真；修之家，其德有余。修之乡，其德乃长；修之邦，其德乃丰；修之天下，其德乃博。以身观身，以家观家，以乡观乡，以邦观邦，以天下观天下。吾何以知天下然？以此。
 
 
-## 王德
+### 王德
 
 1
 >绝智弃辩，民利百倍。绝巧弃利，盗贼无有。绝伪弃虑，民复季子。三言以为文（辩）不足，故命之（或）呼（有所）嘱。视素保朴，少私寡欲。
@@ -198,7 +205,9 @@
 12
 >君子居则贵左，用兵则贵右。兵者，不详之器也，不得已而用之。铦袭为上，弗美也。美之，是乐杀人。夫乐杀人，不可以得志于天下。故吉事上左，丧事上右。是以偏将军居左，上将军居右。言以丧礼居之也。
 
+<br/>
 # 参考
 
 [0]  廖名春, 郭店楚简老子校释.
+
 [1]  [【老子对勘】郭店楚简《老子》释文 - 知乎](https://zhuanlan.zhihu.com/p/34127114)
