--- a/_posts/2023-08-01-周易全文及个人注解.md
+++ b/_posts/2023-08-01-周易全文及个人注解.md
@@ -1,4 +1,12 @@
+---
+title: "周易全文及个人注解"
+date: 2023-08-01
+excerpt:  ䷀ 乾：乾，元亨，利贞。<br>初九：潜龙，勿用<br>九二：见龙在田，利见大人。<br>...
+---
+
 # 通识
+
+下面是一些文本中常出现的单字的解释。
 
 贞：占卜。引申为 正。占卜是从上天得到的结果，自然是顺应天意的正道。金文象形为：某种有功能性的东西。可能是贝壳，青铜器等用作占卜的东西。
 吉：跟神、天有关的好。引申于某种好的祭祀礼仪或者象征。金文象形：将谷物摆放于供桌上，或 将兵器摆放于器皿上面。
@@ -21,9 +29,10 @@
 恤：忧虑。繁体字：卹。金文象形为：一个人旁边一把刀。
 眚：眼睛生病。引申为 灾祸。
 
+<br>
 注释：
 金文：是指汉字的一种书体名称，指的是铸造在殷商与周朝青铜器上的铭文，也叫钟鼎文。因为周朝把铜也叫金，所以铜器上的铭文就叫作“金文”或“吉金文字”。
-
+<br>
 
 # 分释
 
