--- a/_posts/2023-05-15-塔罗牌.md
+++ b/_posts/2023-05-15-塔罗牌.md
@@ -1,8 +1,14 @@
+---
+title: "塔罗牌"
+date: 2023-05-15"
+excerpt: 塔罗牌（Tarot Card）是一种起源于西方的，用于游戏和占卜的卡牌。塔罗牌是一个成功的占卜工具，它吸收了各种神秘学符号，并自成体系...
+---
+
 # 塔罗牌的介绍
 
 塔罗牌（Tarot Card）是一种起源于西方的，用于游戏和占卜的卡牌。塔罗牌是一个成功的占卜工具，它吸收了各种神秘学符号，并自成体系[0]。
 
-![tarot cards](../images/tarot-VICTORMOUSSA-STOCK.ADOBE.COM.png)
+![tarot cards](/images/tarot-VICTORMOUSSA-STOCK.ADOBE.COM.png)
 *By VICTOR MOUSSA - STOCK.ADOBE.COM*
 
 
@@ -12,7 +18,7 @@
 用塔罗牌占卜时，需要理解每张牌的含义。塔罗牌的含义不仅与数字和名称有关，也与设计师绘制的 图像以及图像的意象有关。不同的卡组编排，以及图像和传达的意象，将塔罗牌分为不同的体系和版本（或称为牌组 deck）。
 塔罗牌的解读与版本密切相关。同一张牌在不同的版本之间含义也有差别。在解读、使用塔罗牌时，不光要注意每张牌的通用含义，也要注意不同版本的独特含义。
 
-![the fool in different decks](../images/tarotFool-EleanorTremeer-liminal11.com.png)
+![the fool in different decks](/images/tarotFool-EleanorTremeer-liminal11.com.png)
 *By Eleanor Tremeer - liminal11.com*
 
 
@@ -38,7 +44,7 @@
 
 在这方面的研究可查询 卡尔·荣格。卡尔·荣格是一名著名的心理学家，他提出了 集体潜意识理论。在荣格看来，塔罗牌如同中国易经的卦象或其他带有神秘学色彩的仪式，都是能让我们与集体潜意识交流的工具[3]。此外，荣格还提出了 共时性（synchronicity）原理，用来解释 占卜结果的偶然性和占卜事件的必然性 之间的联系。
 
-![Carl Jung](../images/Jung.jpg)
+![Carl Jung](/images/Jung.jpg)
 
 
 # 塔罗牌的牌阵
@@ -47,7 +53,7 @@
 稍复杂一点的，例如在 经典的3牌牌阵（3-cards spread）：过去-现在-未来 中，有3个卡牌位置。这3个卡牌位置分别代表 过去的情况、现在的情况、未来的情况。在占卜中，占卜者得到3张塔罗牌，并分别放入这3个位置。根据每个位置代表的情形 和 在此位置上的塔罗牌，就可以得到对该情形的解读。例如在 过去位置 上为倒立的恶魔，就可以解读为在过去欲望太多，而难以满足……
 当然，这3个位置，或者说3张卡牌，除了上面的含义外还可以被赋予各种不同的意义，比如：思维-身体-精神、欲望-阻碍-解决 等等。而更加复杂的牌阵往往会有超过5个位置，而且位置之间也有特定的关联。
 
-![tarot spreads](../images/tarotSpreads.png)
+![tarot spreads](/images/tarotSpreads.PNG)
 
 
 # 塔罗牌的入门资料
