some chanegs& add license file

--- a/_posts/2023-08-01-周易全文及个人注解.md
+++ b/_posts/2023-08-01-周易全文及个人注解.md
@@ -944,7 +944,7 @@ I Ching 对此卦的理解 为 雷在下动而遵循上天的指示。因此 无
 虩xi4：恐惧的样子。
 哑：笑声的样子。
 匕：祭祀用，像勺子，乘放食物。
-鬯：香酒。
+鬯chàng：香酒。
 亿：通“臆”。臆测，预料。又 十万，形容非常多。
 跻：登。
 陵：大土山。
@@ -985,7 +985,7 @@ I Ching 对此卦的理解 为 雷在下动而遵循上天的指示。因此 无
 桷jue2：可作为房屋结构（椽）的木材。 
 干：本义像叉子一样的兵器。这里可能指水畔。
 陆：高而平的地方。plateau
-衎：愉快。
+衎kàn：愉快。
 仪：礼仪道具。
 
 #### 54 ䷵ 归妹
